[CES-639] Scaffold `POST /tasks` operation (#51)
